Unit Tests: replace getFirst() with get(0)